--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,8 +9,8 @@
 <h1>LinearSearch</h1>
 <form>
     <label for="value">Value:</label><br>
-    <label for="list">List:</label><br>
     <input type="text" id="value" name="value"><br><br>
+    <label for="list">List:</label><br>
     <input type="text" id="list" name="list"><br><br>
     <input type="button" value="Submit" onclick="loadGetMsg()">
 </form>
@@ -25,7 +25,7 @@
             document.getElementById("getrespmsg").innerHTML =
             this.responseText;
         }
-        xhttp.open("GET", "/linearSearch?list="+listVar+"&value="+valueVar);
+        xhttp.open("GET", "/proxy/LinearSearch?list="+listVar+"&value="+valueVar);
         xhttp.send();
     }
 </script>
@@ -33,10 +33,10 @@
 <h1>BinarySearch</h1>
 <form action="/">
     <label for="value">Value:</label><br>
-    <label for="list">List:</label><br>
     <input type="text" id="valueBS" name="value"><br><br>
+    <label for="list">List:</label><br>
     <input type="text" id="listBS" name="list"><br><br>
-    <input type="button" value="Submit" onclick="loadGetMsg()">
+    <input type="button" value="Submit" onclick="loadGetMsgg()">
 </form>
 <div id="getrespmsgg"></div>
 
@@ -49,7 +49,7 @@
             document.getElementById("getrespmsgg").innerHTML =
             this.responseText;
         }
-        xhttp.open("GET", "/binarySearch?list="+listVar+"&value="+valueVar);
+        xhttp.open("GET", "/proxy/BinarySearch?list="+listVar+"&value="+valueVar);
         xhttp.send();
     }
 </script>
